Fix form label to align center

--- a/src/Components/SearchForm/SearchForm.css
+++ b/src/Components/SearchForm/SearchForm.css
@@ -7,4 +7,5 @@ form {
 
 .form-label {
   margin-bottom: 15px;
+  text-align: center;
 }
